RP-1018 Count "in scope" description inactivation indicators, even if their parent descriptions are out of scope.